...
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:hint="Address"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/province" />

    <EditText
        android:id="@+id/province"
        android:layout_width="395dp"
        android:layout_height="43dp"
        android:hint="Province"
        app:layout_constraintBottom_toTopOf="@+id/address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pb" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="133dp"
        android:layout_marginEnd="110dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="103dp"
...
